--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Gabriel</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 </head>
@@ -29,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <section>
+
       <div class="container">
           <div class="columns">
             <div class="column">
@@ -55,10 +56,84 @@
               </div>
             </div>
             <div class="column is-9">
-              2
+              <div class="card">
+                <header class="card-header">
+                  <p class="card-header-title">
+                    Sobre mim
+                  </p>
+                </header>
+                    <div class="card-content">
+                      <div class="content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora non natus blanditiis quis esse vero explicabo consectetur eius repellat alias dolore repellendus adipisci illo odit, in, tenetur maiores quibusdam! Enim!
+                        <br>
+                      </div>
+                    </div>
+              </div>
+            <br>
+              <div class="card">
+                <header class="card-header">
+                  <p class="card-header-title">
+                    Expêriencias
+                  </p>
+                </header>
+                    <div class="card-content">
+                      <div class="content">
+                       <div class="columns">
+                          <div class="column">
+                            <figure class="image is-128x128">
+                              <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                            </figure>
+                          </div>
+                          <div class="column is-9">
+                            <p class="title is-5">Javascript Developer <span class="tag is-dark">Empresa Chamada X</span></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores distinctio, repellat dolorem pariatur, voluptatibus incidunt atque autem facere cupiditate consequatur fugit porro explicabo quia maiores voluptas quidem! Voluptatem, debitis a. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae autem eveniet at recusandae similique nisi laboriosam totam amet, ipsum voluptatum magnam eaque error dolor, eligendi earum sapiente qui voluptatem. Tenetur.</p>
+                          </div>
+                       </div>
+
+                       <div class="columns">
+                        <div class="column">
+                          <figure class="image is-128x128">
+                            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                          </figure>
+                        </div>
+                        <div class="column is-9">
+                          <p class="title is-5">Ruby Developer <span class="tag is-dark">Empresa Chamada Y</span></p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores distinctio, repellat dolorem pariatur, voluptatibus incidunt atque autem facere cupiditate consequatur fugit porro explicabo quia maiores voluptas quidem! Voluptatem, debitis a. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae autem eveniet at recusandae similique nisi laboriosam totam amet, ipsum voluptatum magnam eaque error dolor, eligendi earum sapiente qui voluptatem. Tenetur.</p>
+                        </div>
+                     </div>
+                 </div>
+                 </div>
+                </div>
+              </div>
+              <!-- Aqui termina o de cima -->
+              <br>
+              <div class="card">
+                <header class="card-header">
+                  <p class="card-header-title">
+                    Formação
+                  </p>
+                </header>
+                    <div class="card-content">
+                      <div class="content">
+                        <div>
+                          <p class="title is-5"> Programação Javascript Full Stack</p>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sint fugiat maxime accusamus temporibus? Laboriosam nam harum illum rem aliquid repudiandae, cumque similique praesentium expedita voluptates. Repellendus ea nisi ut.
+                        </p>
+                        </div>
+                        <hr>
+                        <div>
+                          <p class="title is-5"> HTML + CSS + BULMA</p>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sint fugiat maxime accusamus temporibus? Laboriosam nam harum illum rem aliquid repudiandae, cumque similique praesentium expedita voluptates. Repellendus ea nisi ut.
+                        </p>
+                        </div>
+                      </div>
+                    </div>
+              </div>
             </div>
           </div>
       </div>
-    </section>
+   
 </body>
 </html>
